--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+@import './reset.css';
+
 body {
+  display:flex;
+  flex-direction: column;
+  box-sizing: border-box;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 600;
+  background-color: #C5C5C5;
 }
 
 code {
